# simple-program

./: Anchor.toml  README.md  package.json
config/: wallet.json
programs/simple_program/: Cargo.toml
programs/simple_program/src/: constants.rs  error.rs  lib.rs
programs/simple_program/src/instructions/: init_simple.rs  mod.rs
programs/simple_program/src/state/: mod.rs  presale.rs
tests/: test_localnet.ts  utils.ts
