[package]
name = "simple_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
num-derive = "0.4.2"
num-traits = "0.2"
solana-program = "=1.17.15"
